--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             <h2>Predictive analysis</h2>
             <h3>Year</h3>
             <input id="first" name="Year" type="number ">
-            <h3>What is the Showroom Price?(In lakhs)</h3><br><input id="second" name="Present_Price" required="required">
+            <h3>What is the Showroom Price?</h3><br><input id="second" name="Present_Price" required="required">
             <h3>How Many Kilometers Drived?</h3><input id="third" name="Kms_Driven" required="required">
             <h3>How much owners previously had the car(0 or 1 or 3) ?</h3><br><input id="fourth" name="Owner" required="required">
             <h3>What Is the Fuel type?</h3><br><select name="Fuel_Type_Petrol" id="fuel" required="required">
@@ -48,7 +48,7 @@
 
     <style>
         body {
-            background-color: lightslategray;
+            background-color: pink;
             text-align: center;
             padding: 0px;
         }
@@ -60,6 +60,9 @@
             top: 23px;
         }
         
+	h3,h2{
+		color:black;
+	}
         #box {
             border-radius: 60px;
             border-color: 45px;
@@ -87,7 +90,7 @@
         }
         
         #fuel:hover {
-            background-color: coral;
+            background-color: cyan
         }
         
         #research {
@@ -99,7 +102,7 @@
         }
         
         #research:hover {
-            background-color: coral;
+            background-color: cyan
         }
         
         #resea {
@@ -111,7 +114,7 @@
         }
         
         #resea:hover {
-            background-color: coral;
+            background-color: cyan
         }
         
         #sub {
